css/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
}

/* UTILITIES */
.big-container{
    background-color: rgba(20,24,35,255);
    margin-bottom: 80px;
    padding-bottom: 30px;
}
.container{
    margin-top: 115px;
    margin-left: 300px;
    padding-left: 10px;
}

.flex{
    display: flex;
}

.round{
    border-radius: 50%;
}

.row{
    width: 100%;
}

.inline{
    display: inline;
}

li, #title-playlist, .logo{
    padding-left: 20px;
}

a, #header-button{
    text-decoration: none;
}
.img-fluid{
    width: 100%;
    margin-bottom: 10px;
}

.md{
    flex-wrap: wrap;
}

.center{
    text-align: center;
}

.margin-top-180{
    margin-top: 180px;
}

.uppercase{
    text-transform: uppercase;
}

.space{
    margin: 10px;
}
.content-white, .white, h2, h3{
    color: white;
}
.content-grey, p, a{
    color: rgb(116, 116, 116);
}

p{
    margin-top: 12px;
}
h2, .margin-left-10{
    margin-left: 10px;
}

h2{
    margin-top: 25px;
    font-weight: 700;
    font-size: 30px;
}
h3{
    font-size: 18px;
    margin-top: 10px;
}

.underline:hover{
    text-decoration: underline;
}

/* LG FIRST */
/* NAV BAR */
.nav-bar{
    width: 300px;
}
.nav-bar{
    position: fixed;
    display: flex;
    top: 0;
    left: 0;
    bottom: 85px;
    z-index: 200;
    background-color: black;
}

.compressed{
    display: none;
}

.icons-compressed{
    display: flex;
    flex-direction: column;
    margin: 8px;
    line-height: 2;
}

.img-nav-bar{
    width: 35px;
}
.img-extended-navbar{
    width: 35px;
    margin-right: 7px;
    filter: brightness(70%);
    vertical-align: middle;
}

.border-left{
    border-left: 3px solid rgb(179, 255, 0);
}
.download, .download-compressed{
    margin-right: 7px;
}

.download{
    width: 22px;
    margin-left: 20px;
    vertical-align: middle;
}
.download-compressed{
    width: 28px;
}
.user, .user-compressed{
    background: grey;
    border-radius: 50%;
    border: 1px;
    top: 8px;
}

.user{
    margin-right: 8px;
    margin-left: 20px;
    margin-bottom: 5px;
    width: 30px;
    height: 30px;
    vertical-align: middle;
}

.user-compressed{
    width: 35px;
    height: 35px;
    margin: 0px 10px;
    margin-top: 10px;
}
.logo{
    width: 210px;
    margin-left: 5px;
    margin-bottom: 20px;
}

.extended{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding-top: 20px;
}

.overflow{
    height: 50vh;
    overflow-y: auto;
    line-height: 2.3;
}

.profile{
    padding-top: 10px;
    margin-bottom: 5px;
}

.install{
    padding-bottom: 8px;
}

.plus{
    width: 40px;
    height: 40px;
    font-size: 25px;
    text-align: center;
    padding-top: 8px;
    background-color: rgb(172, 172, 172);
    margin-right: 10px;
    margin-top: 3px;
    margin-bottom: 15px;
}

hr{
    border: 1px solid rgb(116, 116, 116);
    margin: 0 22px;
}

/* HEADER */

#header{
    display: flex;
    justify-content: right;
    align-items: center;
    position: fixed;
    width: calc(100% - 300px);
    top: 0;
    right: 0;
    background-color: rgba(9, 11, 19, 0.767);
    padding-top: 40px;
    padding-bottom: 47px;
}

#header-button{
    padding: 13px 45px;
    color: white;
    border: 1px solid white;
    border-radius: 40px;
}

.button:hover, .play:hover{
    transform: scale(1.2);
}
/* MAIN */
.col-250{
    width: calc(100% / 6 - 20px);
    margin: 10px;
    text-align: center;
    padding-top: 5px;
    margin-top: 30px;
}

li.inline{
    padding: 20px;
    line-height: 4;
}

.hover-white:hover{
    color: white;
}


.play-card{
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    font-size: 100px;
    filter: opacity(0);
    z-index: 1000;

}
.cover{
    position: relative;
}

.cover:hover .img-fluid{
    filter: brightness(0.5);
}

.cover:hover .play-card{
    filter: opacity(1);
    filter: drop-shadow(0px 0px 10px black);
}

/* BOTTOM BAR */
#bottom-bar{
    height: 85px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 400;
    background-color: rgba(40,41,41,255);
    padding: 0 10px;
}

#img-bottom-bar{
    width: 50px;
    margin-top: 5px;
    margin-left: 15px;
    margin-right: 15px;
}

.song{
    display: flex;
    align-items: center;
}

.title, .time{
    font-size: 12px;
}

.title{
    line-height: 1.3;
}

.save, .like, .shuffle, .backward, .forward, .repeat, .list, .monitor, .volume{
    font-size: 15px;
}
.save{
    margin-left: 50px;
    display: flex;
}

.like{
    margin-right: 10px;
}
.like, .folder{
    color: #828282;
}

.shuffle, .backward, .play, .forward, .repeat{
    margin: 0 15px;
}

.play{
    font-size: 32px;
    position: relative;
    top: 8px;
}

.command-bar{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.icons-play{
    margin-top: 10px;
}
.time-row{
    margin-top: 15px;
    margin-bottom: 10px
}
.playing-bar{
    width: 24vw;
    height: 5px;
    border-radius: 20px;
    appearance: none;
    background-color: rgb(170, 170, 170);
    margin: 10px 10px;
    vertical-align: middle;
}

.volume-bar{
    width: 4vw;
    height: 5px;
    border-radius: 20px;
    appearance: none;
    background-color: rgb(170, 170, 170);
    transform: translateY(-3px);
}

  input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
  }

  .list, .monitor, .volume{
    padding: 8px;
  }

  .volume-row{
    margin-right: 20px;
  }

/* RESPONSIVE */

    /* MD */
    @media screen and (max-width: 1304px){
        .col-250{
            width: calc(100% / 4 - 20px);
        }
    }

    /* S */
    @media screen and (max-width: 1000px) {
        .col-250{
            width: calc(100% / 2 - 20px);
        }
        .save{
            flex-direction: column;
            line-height: 1.4;
        }
        
    }
    /* MOBILE */
    @media screen and (max-width: 780px){
        .nav-bar{
            width: 70px;
        }
        .container{
            margin-left: 70px;
        }
        .compressed{
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            margin-top: 10px;
        }
        .extended{
            display: none;
        }
        #header{
            width: calc(100% - 70px);
        }
    }

